# ai_agent

./: Dockerfile  app.py  pyproject.toml
rag/: app.py  rag.ipynb
